Finished Admin Page.

--- a/HTML - Pages/Remove_Product_Page.html
+++ b/HTML - Pages/Remove_Product_Page.html
@@ -4,7 +4,7 @@
 <head>
     <title>Admin Page</title>
     <meta charset = "UTF-8"/>
-    <link href = "../CSS - Files/Admin_Page.css" rel = "stylesheet"/>
+    <link href = "../CSS - Files/Remove_Product_Page.css" rel = "stylesheet"/>
     <meta name = "viewport" content = "width=device-width, initial-scale=1.0"/>
 </head>
 
@@ -16,14 +16,15 @@
     </div>
 </header>
 
-<div class="container">
-    <h1>Choose product to edit</h1>
-    <div class="accordion">
-        <button class="accordion-button">Product Name</button>
-        <button class="accordion-button">Product Name</button>
-        <button class="accordion-button">Product Name</button>
-        <button class="accordion-button">Product Name</button>
-        <button class="accordion-button">Product Name</button>
+<div class = "container">
+    <h1>Pick product to be removed</h1>
+
+    <div class = "remover">
+        <button class = "remove_btn" onclick = "window.location.href = 'Admin_Page.html'">Sakamoto Days 1</button>
+        <button class = "remove_btn" onclick = "window.location.href = 'Admin_Page.html'">Sakamoto Days 2</button>
+        <button class = "remove_btn" onclick = "window.location.href = 'Admin_Page.html'">The Walking Dead Compendium Vol.1</button>
+        <button class = "remove_btn" onclick = "window.location.href = 'Admin_Page.html'">Funko Pop! - SandMan</button>
+        <button class = "remove_btn" onclick = "window.location.href = 'Admin_Page.html'">Funko Pop! - Zombie Wolverine</button>
     </div>
 </div>
 
