--- a/HTML - Pages/Admin_Page.html
+++ b/HTML - Pages/Admin_Page.html
@@ -19,9 +19,9 @@
 <div class="container">
     <h1>Admin Page</h1>
     <div class="accordion">
-        <button class="accordion-button">Add product</button>
-        <button class="accordion-button">Remove product</button>
-        <button class="accordion-button">Edit product</button>
+        <button class="accordion-button" onclick = "window.location.href = 'Add_New_Product.html'">Add product</button>
+        <button class="accordion-button" onclick = "window.location.href = 'Remove_Product_Page.html'">Remove product</button>
+        <button class="accordion-button" onclick = "window.location.href = 'Edit_Product_Page.html'">Edit product</button>
         <button class="accordion-button">Users</button>
         <button class="accordion-button">Website statistics</button>
     </div>
