Design and Practital changes

--- a/HTML - Pages/Delivery.html
+++ b/HTML - Pages/Delivery.html
@@ -31,67 +31,73 @@
   </div>
 </header>
 
-<section class="delivery-payment">
+<section class = "delivery_payment">
   <h2>Delivery & Payment</h2>
 
-  <form class="delivery-form">
-    <div class="form-field">
-      <label for="email">Email address:</label>
-      <input type="email" id="email" placeholder="Insert text">
+  <form class = "delivery_form">
+    <div class = "form_field">
+      <label for = "email">Email address:</label>
+      <input type = "email" id = "email" placeholder = "Insert text">
     </div>
-    <div class="form-field">
-      <label for="first-name">First name:</label>
-      <input type="text" id="first-name" placeholder="Insert text">
+
+    <div class = "form_field">
+      <label for = "first_name">First name:</label>
+      <input type = "text" id = "first_name" placeholder = "Insert text">
     </div>
-    <div class="form-field">
-      <label for="last-name">Last name:</label>
-      <input type="text" id="last-name" placeholder="Insert text">
+
+    <div class = "form_field">
+      <label for = "last_name">Last name:</label>
+      <input type = "text" id = "last_name" placeholder = "Insert text">
     </div>
-    <div class="form-field">
-      <label for="state">State:</label>
-      <input type="text" id="state" placeholder="Insert text">
+
+    <div class = "form_field">
+      <label for = "state">State:</label>
+      <input type = "text" id = "state" placeholder = "Insert text">
     </div>
-    <div class="form-field">
-      <label for="city">City:</label>
-      <input type="text" id="city" placeholder="Insert text">
+
+    <div class = "form_field">
+      <label for = "city">City:</label>
+      <input type = "text" id = "city" placeholder = "Insert text">
     </div>
-    <div class="form-field">
-      <label for="postal-code">Postal code:</label>
-      <input type="text" id="postal-code" placeholder="Insert text">
+
+    <div class = "form_field">
+      <label for = "postal_code">Postal code:</label>
+      <input type = "text" id = "postal_code" placeholder = "Insert text">
     </div>
-    <div class="form-field">
-      <label for="phone">Phone number:</label>
-      <input type="tel" id="phone" placeholder="Insert text">
+
+    <div class = "form_field">
+      <label for = "phone">Phone number:</label>
+      <input type = "tel" id = "phone" placeholder = "Insert text">
     </div>
   </form>
 
-  <div class="transport-section">
+  <div class = "transport_part">
     <h3>Mode of transport</h3>
 
-    <div class="delivery-choice">
-      <label class="delivery-option">
-        <input type="radio" name="delivery" value="sps">
-        <span class="star">★</span>
-        <span class="label-text">SPS</span>
-        <span class="price">5.99 €</span>
+    <div class = "delivery_choice">
+      <label class = "delivery_option">
+        <input type = "radio" name = "delivery" value = "sps">
+        <span class = "star">★</span>
+        <span class = "label_text">SPS</span>
+        <span class = "price">5.99 €</span>
       </label>
 
-      <label class="delivery-option">
-        <input type="radio" name="delivery" value="packet">
-        <span class="star">★</span>
-        <span class="label-text">Packet</span>
-        <span class="price">6.99 €</span>
+      <label class = "delivery_option">
+        <input type = "radio" name = "delivery" value = "packet">
+        <span class = "star">★</span>
+        <span class = "label_text">Packet</span>
+        <span class = "price">6.99 €</span>
       </label>
 
-      <label class="delivery-option">
-        <input type="radio" name="delivery" value="upc">
-        <span class="star">★</span>
-        <span class="label-text">UPC Box</span>
-        <span class="price">7.99 €</span>
+      <label class = "delivery_option">
+        <input type = "radio" name = "delivery" value = "upc">
+        <span class = "star">★</span>
+        <span class = "label_text">UPC Box</span>
+        <span class = "price">7.99 €</span>
       </label>
     </div>
 
-    <button class="buy-button" onclick = "window.location.href = 'Payment_Succeeded_Page.html'">Buy</button>
+    <button class = "buy_btn" onclick = "window.location.href = 'Payment_Succeeded_Page.html'">Buy</button>
   </div>
 </section>
 
