Web Statistics Website

--- a/HTML - Pages/Admin_Page.html
+++ b/HTML - Pages/Admin_Page.html
@@ -23,7 +23,7 @@
         <button class="accordion-button" onclick = "window.location.href = 'Remove_Product_Page.html'">Remove product</button>
         <button class="accordion-button" onclick = "window.location.href = 'Edit_Product_Page.html'">Edit product</button>
         <button class="accordion-button">Users</button>
-        <button class="accordion-button">Website statistics</button>
+        <button class="accordion-button" onclick = "window.location.href = 'Web_Statistics_Page.html'">Website statistics</button>
     </div>
 </div>
 
