Added Photos for Dungeon Goodies Products and rest of the responsiveness, did some final touches.

--- a/HTML - Pages/Edit_Product_Detail_Page.html
+++ b/HTML - Pages/Edit_Product_Detail_Page.html
@@ -18,8 +18,8 @@
 
 <main class = "product_add_container">
 
-  <div class = "photo_section">
-    <span>Photo</span>
+  <div class = "photo_section2">
+    <img src="../Photos_DG/Products/Sakamoto_Days_1.jpg" alt="Sakamoto Days 1" />
   </div>
 
   <form class = "product_form">
