--- a/HTML - Pages/Product_Page.html
+++ b/HTML - Pages/Product_Page.html
@@ -66,7 +66,10 @@
             <a href="Product_Detail.html" class="product-link">
                 <div class="product">
                     <div class="image">
-                    <div class="heart">♡</div></div>
+                        <div class="heart">♡</div>
+                        <img src = "../Photos_DG/Products/Sakamoto_Days_1.jpg" alt = "Sakamoto Days 1" class = "product_img">
+                    </div>
+
                     <p class = "product_name">Sakamoto Days 1</p>
                     <p class = "product_price">€12.99</p>
                     <button class="buy-btn">Buy</button>
@@ -75,7 +78,9 @@
             <a href="Product_Detail.html" class="product-link">
                 <div class="product">
                     <div class="image">
-                    <div class="heart">♡</div></div>
+                        <div class="heart">♡</div>
+                        <img src = "../Photos_DG/Products/Sakamoto_Days_2.jpg" alt = "Sakamoto Days 2" class = "product_img">
+                    </div>
                     <p class = "product_name">Sakamoto Days 2</p>
                     <p class = "product_price">€12.99</p>
                     <button class="buy-btn">Buy</button>
@@ -84,7 +89,9 @@
             <a href="Product_Detail.html" class="product-link">
                 <div class="product">
                     <div class="image">
-                        <div class="heart">♡</div></div>
+                        <div class="heart">♡</div>
+                        <img src = "../Photos_DG/Products/Walking_Dead_ComVol1.jpg" alt = "The Walking Dead Compendium Vol.1" class = "product_img">
+                    </div>
                     <p class = "product_name">The Walking Dead Compendium Vol.1</p>
                     <p class = "product_price">€49.99</p>
                     <button class="buy-btn">Buy</button>
@@ -93,7 +100,9 @@
             <a href="Product_Detail.html" class="product-link">
                 <div class="product">
                     <div class="image">
-                    <div class="heart">♡</div></div>
+                        <div class="heart">♡</div>
+                        <img src = "../Photos_DG/Products/Funko_Pop_SandMan.jpg" alt = "Funko Pop! - SandMan" class = "product_img">
+                    </div>
                     <p class = "product_name"> Funko Pop! - SandMan</p>
                     <p class = "product_price">€15.99</p>
                     <button class="buy-btn">Buy</button>
@@ -102,7 +111,9 @@
             <a href="Product_Detail.html" class="product-link">
                 <div class="product">
                     <div class="image">
-                    <div class="heart">♡</div></div>
+                        <div class="heart">♡</div>
+                        <img src = "../Photos_DG/Products/Funko_Pop_ZombieWolverine.jpg" alt = "Funko Pop! - ZombieWolverine" class = "product_img">
+                    </div>
                     <p class = "product_name">Funko Pop! - Zombie Wolverine</p>
                     <p class = "product_price">€15.99</p>
                     <button class="buy-btn">Buy</button>
@@ -111,7 +122,9 @@
             <a href="Product_Detail.html" class="product-link">
                 <div class="product">
                     <div class="image">
-                    <div class="heart">♡</div></div>
+                        <div class="heart">♡</div>
+                        <img src = "../Photos_DG/Products/Funko_Pop_ShrimpRick.jpg" alt = "Funko Pop! - ShrimpRick" class = "product_img">
+                    </div>
                     <p class = "product_name">Funko Pop! - Shrimp Rick</p>
                     <p class = "product_price">€15.99</p>
                     <button class="buy-btn">Buy</button>
