--- a/HTML - Pages/Sales.html
+++ b/HTML - Pages/Sales.html
@@ -67,8 +67,10 @@
                 <div class="product">
                     <div class="image">
                         <div class="sale-banner">ON SALE</div>
-                        <div class="heart">♡</div></div>
-                    <p class = "product_name">Junji Ito - Uzumaki</p>
+                        <div class="heart">♡</div>
+                        <img src = "../Photos_DG/Products/Junji_Ito_Shiver.jpg" alt = "Junji Ito - Shiver" class = "product_img">
+                    </div>
+                    <p class = "product_name">Junji Ito - Shiver</p>
                     <s class = "product_price">€12.99</s>
                     <p class = "sale_price">€10.99</p>
                     <button class="buy-btn">Buy</button>
@@ -78,7 +80,9 @@
                 <div class="product">
                     <div class="image">
                         <div class="sale-banner">ON SALE</div>
-                        <div class="heart">♡</div></div>
+                        <div class="heart">♡</div>
+                        <img src = "../Photos_DG/Products/OldManLogan.jpg" alt = "Wolverine: Old Man Logan" class = "product_img">
+                    </div>
                     <p class = "product_name">Wolverine: Old Man Logan</p>
                     <s class = "product_price">€12.99</s>
                     <p class = "sale_price">€10.99</p>
@@ -89,7 +93,9 @@
                 <div class="product">
                     <div class="image">
                         <div class="sale-banner">ON SALE</div>
-                        <div class="heart">♡</div></div>
+                        <div class="heart">♡</div>
+                        <img src = "../Photos_DG/Products/Fell.jpg" alt = "Fell Vol.1" class = "product_img">
+                    </div>
                     <p class = "product_name">Fell Vol.1</p>
                     <s class = "product_price">€12.99</s>
                     <p class = "sale_price">€39.99</p>
@@ -100,7 +106,9 @@
                 <div class="product">
                     <div class="image">
                         <div class="sale-banner">ON SALE</div>
-                        <div class="heart">♡</div></div>
+                        <div class="heart">♡</div>
+                        <img src = "../Photos_DG/Products/Funko_Pop_TheBatman.jpg" alt = "Funko Pop! - TheBatman" class = "product_img">
+                    </div>
                     <p class = "product_name"> Funko Pop! - The Batman</p>
                     <s class = "product_price">€15.99</s>
                     <p class = "sale_price">€12.99</p>
@@ -111,7 +119,9 @@
                 <div class="product">
                     <div class="image">
                         <div class="sale-banner">ON SALE</div>
-                        <div class="heart">♡</div></div>
+                        <div class="heart">♡</div>
+                        <img src = "../Photos_DG/Products/Funko_Pop_Nebula.jpg" alt = "Funko Pop! - Nebula" class = "product_img">
+                    </div>
                     <p class = "product_name">Funko Pop! - Nebula</p>
                     <s class = "product_price">€15.99</s>
                     <p class = "sale_price">€12.99</p>
@@ -122,7 +132,9 @@
                 <div class="product">
                     <div class="image">
                         <div class="sale-banner">ON SALE</div>
-                        <div class="heart">♡</div></div>
+                        <div class="heart">♡</div>
+                        <img src = "../Photos_DG/Products/Funko_Pop_SpiderMan.jpg" alt = "Funko Pop! - SpiderMan" class = "product_img">
+                    </div>
                     <p class = "product_name">Funko Pop! - Spider-Man</p>
                     <s class = "product_price">€15.99</s>
                     <p class = "sale_price">€12.99</p>
