--- a/HTML - Pages/Shopping_Cart.html
+++ b/HTML - Pages/Shopping_Cart.html
@@ -37,7 +37,9 @@
   <div class = "cart_product">
     <div class = "cart_product_left">
 
-      <a href = "Product_Detail.html" class="cart_product_image"></a>
+      <a href = "Product_Detail.html" class = "cart_product_image">
+        <img src = "../Photos_DG/Products/Sakamoto_Days_1.jpg" alt = "Sakamoto Days 1">
+      </a>
 
       <div class = "cart_product_info">
         <h2 class = "product_name">
@@ -67,7 +69,11 @@
 
   <div class = "cart_product">
     <div class = "cart_product_left">
-      <a href = "Product_Detail.html" class = "cart_product_image"></a>
+      <a href = "Product_Detail.html" class = "cart_product_image">
+        <img src = "../Photos_DG/Products/Walking_Dead_ComVol1.jpg" alt = "The Walking Dead Compendium Vol. 1">
+      </a>
+
+
 
       <div class = "cart_product_info">
         <h2 class = "product_name">
