--- a/HTML - Pages/Users_Info_Page.html
+++ b/HTML - Pages/Users_Info_Page.html
@@ -27,7 +27,7 @@
       <span>ID</span>
       <span>Full Name</span>
       <span>Email</span>
-      <span>Member</span>
+      <span>Role</span>
     </div>
 
     <div class = "user_info">
