--- a/HTML - Pages/Main_Page.html
+++ b/HTML - Pages/Main_Page.html
@@ -66,12 +66,24 @@
             <button class = "scroller_button left">&#10094;</button>
 
             <div class = "scroller_items" id = "new_arrivals_scrolling">
-                <a href = "Product_Detail.html" class = "item">Manga 1</a>
-                <a href = "Product_Detail.html" class = "item">Manga 2</a>
-                <a href = "Product_Detail.html" class = "item">Manga 3</a>
-                <a href = "Product_Detail.html" class = "item">Manga 4</a>
-                <a href = "Product_Detail.html" class = "item">Manga 5</a>
-                <a href = "Product_Detail.html" class = "item">Manga 6</a>
+                <a href = "Product_Detail.html" class = "item">
+                    <img src = "../Photos_DG/Products/Sakamoto_Days_2.jpg" alt = "Sakamoto Days 2" class = "scroller_img">
+                </a>
+                <a href = "Product_Detail.html" class = "item">
+                    <img src = "../Photos_DG/Products/Walking_Dead_ComVol1.jpg" alt = "The Walking Dead Compendium Vol.1" class = "scroller_img">
+                </a>
+                <a href = "Product_Detail.html" class = "item">
+                    <img src = "../Photos_DG/Products/Funko_Pop_SandMan.jpg" alt = "Funko Pop! - SandMan" class = "scroller_img">
+                </a>
+                <a href = "Product_Detail.html" class = "item">
+                    <img src = "../Photos_DG/Products/Funko_Pop_ZombieWolverine.jpg" alt = "Funko Pop! - ZombieWolverine" class = "scroller_img">
+                </a>
+                <a href = "Product_Detail.html" class = "item">
+                    <img src = "../Photos_DG/Products/OldManLogan.jpg" alt = "Wolverine: Old Man Logan" class = "scroller_img">
+                </a>
+                <a href = "Product_Detail.html" class = "item">
+                    <img src = "../Photos_DG/Products/Funko_Pop_SpiderMan.jpg" alt = "Funko Pop! - SpiderMan" class = "scroller_img">
+                </a>
             </div>
 
             <button class = "scroller_button right">&#10095;</button>
@@ -88,12 +100,24 @@
             <button class = "scroller_button left">&#10094;</button>
 
             <div class = "scroller_items" id = "what_you_may_like_scrolling">
-                <a href = "Product_Detail.html" class = "item">Funko 1</a>
-                <a href = "Product_Detail.html" class = "item">Funko 2</a>
-                <a href = "Product_Detail.html" class = "item">Funko 3</a>
-                <a href = "Product_Detail.html" class = "item">Funko 4</a>
-                <a href = "Product_Detail.html" class = "item">Funko 5</a>
-                <a href = "Product_Detail.html" class = "item">Funko 6</a>
+                <a href = "Product_Detail.html" class = "item">
+                    <img src = "../Photos_DG/Products/Sakamoto_Days_1.jpg" alt = "Sakamoto Days 1" class = "scroller_img">
+                </a>
+                <a href = "Product_Detail.html" class = "item">
+                    <img src = "../Photos_DG/Products/Fell.jpg" alt = "Fell Vol.1" class = "scroller_img">
+                </a>
+                <a href = "Product_Detail.html" class = "item">
+                    <img src = "../Photos_DG/Products/OldManLogan.jpg" alt = "Wolverine: Old Man Logan" class = "scroller_img">
+                </a>
+                <a href = "Product_Detail.html" class = "item">
+                    <img src = "../Photos_DG/Products/Funko_Pop_Nebula.jpg" alt = "Funko Pop! - Nebula" class = "scroller_img">
+                </a>
+                <a href = "Product_Detail.html" class = "item">
+                    <img src = "../Photos_DG/Products/Funko_Pop_TheBatman.jpg" alt = "Funko Pop! - TheBatman" class = "scroller_img">
+                </a>
+                <a href = "Product_Detail.html" class = "item">
+                    <img src = "../Photos_DG/Products/Funko_Pop_ShrimpRick.jpg" alt = "Funko Pop! - ShrimpRick" class = "scroller_img">
+                </a>
             </div>
 
             <button class = "scroller_button right">&#10095;</button>
