--- a/HTML - Pages/Product_Detail.html
+++ b/HTML - Pages/Product_Detail.html
@@ -35,7 +35,9 @@
 <div class="container">
     <div class="container">
         <div class="product">
-            <div class="image-placeholder"></div>
+            <div class="product_image_wrapper">
+                <img src="../Photos_DG/Products/Sakamoto_Days_1.jpg" alt="Sakamoto Days 1" class="product_image">
+            </div>
             <div class="details">
                 <h1>Sakamoto Days 1</h1>
                 <span class="tag">New</span>
