Fixes after Presentation

--- a/HTML - Pages/Delivery.html
+++ b/HTML - Pages/Delivery.html
@@ -32,7 +32,7 @@
 </header>
 
 <section class = "delivery_payment">
-  <h2>Delivery & Payment</h2>
+  <h2>Delivery</h2>
 
   <form class = "delivery_form">
     <div class = "form_field">
@@ -97,7 +97,7 @@
       </label>
     </div>
 
-    <button class = "buy_btn" onclick = "window.location.href = 'Payment_Succeeded_Page.html'">Buy</button>
+    <button class = "buy_btn" onclick = "window.location.href = 'Payment.html'">Continue To Payment</button>
   </div>
 </section>
 
