--- a/HTML - Pages/Product_Detail.html
+++ b/HTML - Pages/Product_Detail.html
@@ -49,6 +49,15 @@
                             <span class="heart-icon">♡</span> Add to Favourites
                         </button>
                     </div>
+
+                    <div class = "amount_check">
+                        <button class = "amount_btn minus_btn">-</button>
+                        <label>
+                            <input type = "text" class = "amount_num" value = "1" readonly />
+                        </label>
+                        <button class = "amount_btn plus_btn">+</button>
+                    </div>
+
                     <button class="buy" onclick = "window.location.href = 'Shopping_Cart.html'">🛒 Buy</button>
                 </div>
                 <div class="about">
